[package]
name = "Haole"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/KoHaRxnP/haole"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
crossterm = { version = "0.27", features = ["events"] }
confy = "0.6"
ratatui = "0.26"
self_update = { version = "0.41", features = ["archive-zip", "archive-zip-deflate"] }
chrono = "0.4"

[[bin]]
name = "haole"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
