[package]
name = "Haole"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/KoHaRxnP/haole"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.55", features = ["derive"] }
colored = "3.1.1"
crossterm = { version = "0.29.0", features = ["events"] }
confy = "2.0.0"
ratatui = "0.30.0"
self_update = { version = "0.42.0", features = ["archive-zip"] }
chrono = "0.4"

[[bin]]
name = "haole"
path = "src/main.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
